--- a/src/main/resources/com/example/busfx/hello-view.fxml
+++ b/src/main/resources/com/example/busfx/hello-view.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane prefHeight="150.0" prefWidth="286.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.busfx.HelloController">
    <children>
-       <Button layoutX="53.0" layoutY="98.0" prefHeight="27.0" prefWidth="77.0" text="Проверить" />
+       <Button layoutX="53.0" layoutY="98.0" onAction="#mainCheck" prefHeight="27.0" prefWidth="77.0" text="Проверить" />
    
           <Label fx:id="noCrash" layoutX="158.0" layoutY="98.0" prefHeight="18.0" prefWidth="99.0" text="No Crash" textAlignment="CENTER" textFill="#00ff6a" visible="false">
          <font>
@@ -21,5 +21,6 @@
             <Font size="18.0" />
          </font>
       </Label>
+      <Label fx:id="wrongFormat" layoutX="30.0" layoutY="76.0" prefHeight="18.0" prefWidth="230.0" text="вводите только целые числа и пробелы" textFill="#ff7300" visible="false" />
    </children>
 </AnchorPane>
